--- a/index.html
+++ b/index.html
@@ -1,13 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- font awsome -->
+  <script src="https://kit.fontawesome.com/6b8e36eaad.js" crossorigin="anonymous"></script>
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
-    
+  <!-- Header start -->
+  <header>
+
+  </header>
+  <!-- header end -->
+  <main>
+    <!-- top-player and top Blogs -->
+    <section class="container">
+      <div class="top-players">
+        <h2 class="section-title">Top Players</h2>
+        <div class="players">
+          <div class="player">
+            <img src="images/players/player-1.png" alt="">
+            <h3 class="player-name" class="player-name">Top Player-1</h3>
+          </div>
+          <div class="player">
+            <img src="images/players/player-2.png" alt="">
+            <h3 class="player-name">Top Player-2</h3>
+          </div>
+          <div class="player">
+            <img src="images/players/player-3.png" alt="">
+            <h3 class="player-name">Top Player-3</h3>
+          </div>
+          <div class="player">
+            <img src="images/players/player-4.png" alt="">
+            <h3 class="player-name">Top Player-4</h3>
+          </div>
+          <div class="player">
+            <img src="images/players/player-5.png" alt="">
+            <h3 class="player-name">Top Player-5</h3>
+          </div>
+          <div class="player">
+            <img src="images/players/player-6.png" alt="">
+            <h3 class="player-name">Top Player-6</h3>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="top-blogs">
+        <h2 class="section-title">Top Blogs</h2>
+        <div class="blogs">
+          <article class="blog">
+            <div class="thumbnail">
+              <img src="images/blogs/blog-1.png" alt="">
+            </div>
+            <div class="blog-info">
+              <h3 class="blog -title">13 of My Favourite UI/UX Goodies</h3>
+              <p class="blog-author">By <a href="">Danny Sapio</a></p>
+            </div>
+          </article>
+          <article class="blog">
+            <div class="thumbnail">
+              <img src="images/blogs/blog-2.png" alt="">
+            </div>
+            <div class="blog-info">
+              <h3 class="blog -title">13 of My Favourite UI/UX Goodies</h3>
+              <p class="blog-author">By <a href="">Danny Sapio</a></p>
+            </div>
+          </article>
+          <article class="blog">
+            <div class="thumbnail">
+              <img src="images/blogs/blog-3.png" alt="">
+            </div>
+            <div class="blog-info">
+              <h3 class="blog -title">13 of My Favourite UI/UX Goodies</h3>
+              <p class="blog-author">By <a href="">Danny Sapio</a></p>
+            </div>
+          </article>
+          <article class="blog">
+            <div class="thumbnail">
+              <img src="images/blogs/blog-4.png" alt="">
+            </div>
+            <div class="blog-info">
+              <h3 class="blog -title">13 of My Favourite UI/UX Goodies</h3>
+              <p class="blog-author">By <a href="">Danny Sapio</a></p>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+    <!-- latest courses -->
+    <section class="container">
+      <h2 class="section-title">Latest Courses </h2>
+      <div class="courses">
+        <div class="course">
+          <div class="course-banner">
+            <img src="images/courses/course-1.png" alt="">
+          </div>
+          <div class="courses-details">
+            <h3 class="course-title">React - The Complete Guide 2020</h3>
+            <p class="course-author">Reed Krakoff.</p>
+            <div class="course-info">
+              <div class="rating">
+              <div>
+                <i class="fa-solid fa-star filled"></i>
+              </div>
+              <div>
+                <i class="fa-solid fa-star filled"></i>
+              </div>
+              <div>
+                <i class="fa-solid fa-star filled"></i>
+              </div>
+              <div>
+                <i class="fa-solid fa-star filled"></i>
+              </div>
+              <div>
+                <i class="fa-solid fa-star empty"></i>
+                <span>4.5</span>
+              </div>
+            </div>
+              <div class="course-duration">
+                <i class="fa-regular fa-clock"></i>
+                01:30hr
+              </div>
+            </div>
+          </div>
+        </div>
+      <!--  end -->
+      <div class="course">
+        <div class="course-banner">
+          <img src="images/courses/course-2.png" alt="">
+        </div>
+        <div class="courses-details">
+          <h3 class="course-title">React - The Complete Guide 2020</h3>
+          <p class="course-author">Reed Krakoff.</p>
+          <div class="course-info">
+            <div class="rating">
+            <div>
+              <i class="fa-solid fa-star filled"></i>
+            </div>
+            <div>
+              <i class="fa-solid fa-star filled"></i>
+            </div>
+            <div>
+              <i class="fa-solid fa-star filled"></i>
+            </div>
+            <div>
+              <i class="fa-solid fa-star filled"></i>
+            </div>
+            <div>
+              <i class="fa-solid fa-star empty"></i>
+              <span>4.3</span>
+            </div>
+          </div>
+            <div class="course-duration">
+              <i class="fa-regular fa-clock"></i>
+              01:20hr
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="course">
+        <div class="course-banner">
+          <img src="images/courses/course-3.png" alt="">
+        </div>
+        <div class="courses-details">
+          <h3 class="course-title">React - The Complete Guide 2020</h3>
+          <p class="course-author">Reed Krakoff.</p>
+          <div class="course-info">
+            <div class="rating">
+            <div>
+              <i class="fa-solid fa-star filled"></i>
+            </div>
+            <div>
+              <i class="fa-solid fa-star filled"></i>
+            </div>
+            <div>
+              <i class="fa-solid fa-star filled"></i>
+            </div>
+            <div>
+              <i class="fa-solid fa-star filled"></i>
+            </div>
+            <div>
+              <i class="fa-solid fa-star empty"></i>
+              <span>4.5</span>
+            </div>
+          </div>
+            <div class="course-duration">
+              <i class="fa-regular fa-clock"></i>
+              01:30hr
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
+
 </html>
